# SmartHome

./: LICENSE  README.md  树莓派智能家居系统说明文档.md
QT源文件/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simpleclient.pro  simpleclient.pro.user.5c182f3  simpleclient.pro.user.6dbef3f  simpleclient.pro.user.a4da5f4
树莓派代码/: CMakeLists.txt  main.cpp  main.h  mqtt.cpp  mqtt.h
